# tokei

./: CMakeLists.txt  README.md
docs/: docs.md
examples/: CMakeLists.txt  basic.cpp  basic.h  main.cpp  suzanne.cpp  suzanne.h
examples/basic/: CMakeLists.txt  basic.cpp
examples/basic/resources/: compile_shaders.bat
examples/basic/resources/shaders/: basic.vert  basic.vert.spv
examples/headless_compute/: CMakeLists.txt  headless_compute.cpp
examples/headless_compute/resources/: compile_shaders.bat
examples/headless_compute/resources/shaders/: compute.comp  compute.comp.spv
examples/multiple_objects/: CMakeLists.txt  multiple_objects.cpp
examples/multiple_objects/resources/shaders/: suzanne.frag  suzanne.vert.spv
examples/pbr/: CMakeLists.txt  pbr.cpp
examples/pbr/resources/: compile_shaders.bat
examples/pbr/resources/shaders/: pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv
examples/resources/: compile_shaders.bat
examples/resources/shaders/: default.frag  default.frag.spv
examples/slime/: CMakeLists.txt  main.cpp
examples/slime/resources/: compile_shaders.bat
examples/slime/resources/shaders/: fullscreen.frag  fullscreen.frag.spv  fullscreen.vert  fullscreen.vert.spv  particles.comp  particles.comp.spv  post.comp  post.comp.spv
examples/suzanne/: CMakeLists.txt  suzanne.cpp
examples/suzanne/resources/: compile_shaders.bat
examples/suzanne/resources/shaders/: suzanne.vert
include/: cmd_buffer.h  device.h  pokei.h
src/: allocators.cpp  allocators.h  common.h  pokei.cpp  resources.cpp  resources.h  vk_init.h  vulkan_cmd_buffer.cpp  vulkan_device.cpp  vulkan_device.h  vulkan_resources.cpp  vulkan_resources.h  vulkan_types.h
